# TV

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/darkwood/tv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/darkwood/tv/: MainActivity.java  TestActivity.java
app/src/main/java/com/darkwood/tv/ui/dashboard/: DashboardFragment.java  DashboardViewModel.java
app/src/main/java/com/darkwood/tv/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/com/darkwood/tv/ui/notifications/: NotificationsFragment.java  NotificationsViewModel.java
app/src/main/res/layout/: activity_test.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/darkwood/tv/: ExampleUnitTest.java
dkplayer/: build.gradle
dkplayer/src/androidTest/java/com/darkwood/dkplayer/: ExampleInstrumentedTest.java
dkplayer/src/main/: AndroidManifest.xml
dkplayer/src/main/cpp/: CMakeLists.txt
dkplayer/src/main/cpp/src/: LogUtil.h  MediaPlayer.cpp  MediaPlayer.h  jni_darkwood_dkplayer.cpp
dkplayer/src/main/java/com/darkwood/dkplayer/: DKPlayer.java
dkplayer/src/test/java/com/darkwood/dkplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
